# Mirafold

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.claude/: launch.json
.github/: FUNDING.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
apps/desktop/src/components/: AppShell.tsx  BulkActionsBar.tsx  EmptyState.tsx  PhotoCard.tsx  PhotoViewer.tsx  ScanIndicator.tsx
apps/desktop/src/i18n/: index.ts
apps/desktop/src/i18n/locales/: en.json  fr.json
apps/desktop/src/lib/: api.ts  grouping.ts  utils.ts
apps/desktop/src/stores/: selection.ts  useSelectAllShortcut.ts
apps/desktop/src/views/: DuplicatesView.tsx  FacesView.tsx  LibraryView.tsx  SearchView.tsx  SettingsView.tsx
apps/ml-service/: requirements.txt  run.py
apps/ml-service/mirafold_ml/: __init__.py  app.py  clip_embed.py  config.py  db.py  duplicates.py  exif.py  faces.py  geocoding.py  hashing.py  ops.py  progress.py  scanner.py  thumbnails.py
docs/screenshots/: .gitkeep
scripts/: generate_icons.py  record_demo.py
